--- a/DYLive_Swift/DYLive_Swift/Base.lproj/Profile~.storyboard
+++ b/DYLive_Swift/DYLive_Swift/Base.lproj/Profile~.storyboard
@@ -6,13 +6,14 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Main Tab Bar Controller-->
+        <!--Tab Bar Controller-->
         <scene sceneID="nyj-vp-cyg">
             <objects>
-                <tabBarController id="GjZ-wS-R8h" customClass="MainTabBarController" customModule="DYLive_Swift" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController id="GjZ-wS-R8h" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kuO-hX-XyA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -22,12 +23,47 @@
                         <segue destination="zuX-f3-0EW" kind="relationship" relationship="viewControllers" id="xo9-Md-7Xx"/>
                         <segue destination="uD4-c8-lG3" kind="relationship" relationship="viewControllers" id="V33-ix-YDU"/>
                         <segue destination="XzO-W1-3dI" kind="relationship" relationship="viewControllers" id="xrC-Aw-cEg"/>
-                        <segue destination="JHx-9M-fj5" kind="relationship" relationship="viewControllers" id="8eQ-xr-SMo"/>
+                        <segue destination="Hu1-Pj-ySJ" kind="relationship" relationship="viewControllers" id="8eQ-xr-SMo"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="axF-m7-wVb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-267" y="160"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="FZy-3x-fJF">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bSH-en-2cT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="R78-Jc-VeY" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2qv-cf-GO3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="tSV-Jq-ltT"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Abr-lm-DOM"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1535" y="1327"/>
+        </scene>
+        <!--我的-->
+        <scene sceneID="3Dy-Vi-dDp">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O0e-F8-b1f" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Hu1-Pj-ySJ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="我的" image="btn_user_normal" selectedImage="btn_user_selected" id="QAX-pP-l7Z"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5Zc-pj-Y9y">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="R78-Jc-VeY" kind="relationship" relationship="rootViewController" id="hv4-SQ-iVN"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="598" y="1327"/>
         </scene>
         <!--Home-->
         <scene sceneID="GCG-ll-tAh">
@@ -37,7 +73,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="scl-Aj-RhE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="389" y="-15"/>
+            <point key="canvasLocation" x="620" y="-663"/>
         </scene>
         <!--Live-->
         <scene sceneID="QQT-TR-M4e">
@@ -47,7 +83,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4xL-2y-59n" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="390" y="71"/>
+            <point key="canvasLocation" x="620" y="1"/>
         </scene>
         <!--Follow-->
         <scene sceneID="819-47-ONw">
@@ -57,17 +93,11 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wWD-eC-g7f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="402" y="174"/>
-        </scene>
-        <!--Profile-->
-        <scene sceneID="BXW-ZF-3DT">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Profile" id="JHx-9M-fj5" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="gPT-oN-kui"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="95M-Aw-vLa" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="402" y="257"/>
+            <point key="canvasLocation" x="598" y="661"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="btn_user_normal" width="24" height="24"/>
+        <image name="btn_user_selected" width="24" height="24"/>
+    </resources>
 </document>
